fix(css): ensure that text buttons in selected rows remain legible (#273)
Currently in a dark theme (with dark button backgrounds), when a selected
row has a button on it, the text within that button is dark colored. With
this patch, the text should be colored based on what the theme specifies
for foreground text (usually "black" on light themes and "white" on
light themes) so that the text remains readable on dark
button backgrounds.

Fixes pop-os/gtk-theme#516

--- a/data/styles/application.css
+++ b/data/styles/application.css
@@ -185,3 +185,7 @@ flowboxchild grid image,
 row grid image {
   -gtk-icon-shadow: 0 2px 3px alpha(black, 0.3);
 }
+
+row.activatable button.text-button > label {
+    color: @theme_fg_color;
+  }
